// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alerts /> renders Alerts correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Alerts
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)",
              "message": "Disk is inaccessible",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephOSDDiskUnavailable",
              "severity": "critical",
            },
          }
        }
        key="alert-0"
      />
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Data recovery has been active for over 2h. Contact Support",
              "message": "Data recovery is slow",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephDataRecoveryTakingTooLong",
              "severity": "warning",
            },
          }
        }
        key="alert-1"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Data Recovery correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Alerts
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Data recovery has been active for over 2h. Contact Support",
              "message": "Data recovery is slow",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephDataRecoveryTakingTooLong",
              "severity": "warning",
            },
          }
        }
        key="alert-0"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Disk Inaccessible correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <DashboardCardTitle
      className={null}
    >
      Alerts
    </DashboardCardTitle>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)",
              "message": "Disk is inaccessible",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephOSDDiskUnavailable",
              "severity": "critical",
            },
          }
        }
        key="alert-0"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Empty Alerts correctly 1`] = `""`;

exports[`<Alerts /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title kubevirt-dashboard__card-title"
    >
      Alerts
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-alert__alerts-body"
    >
      <div
        class="kubevirt-alert__item"
      >
        <span
          aria-hidden="true"
          class="fa fa-exclamation-circle kubevirt-alert__icon kubevirt-alert__icon--critical"
        />
        <div
          class="kubevirt-alert__item-message"
        >
          Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)
        </div>
      </div>
      <div
        class="kubevirt-alert__item"
      >
        <span
          aria-hidden="true"
          class="fa fa-exclamation-triangle kubevirt-alert__icon kubevirt-alert__icon--warning"
        />
        <div
          class="kubevirt-alert__item-message"
        >
          Data recovery has been active for over 2h. Contact Support
        </div>
      </div>
    </div>
  </div>
</div>
`;
